examples/08.ingress-ha/3.app-echoserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: echoserver
spec:
  rules:
  - host: echoserver.test
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: echoserver
            port: 
              number: 8080
        path: /
